[package]
name = "solis"
version = "0.0.0"
description = "A programming language designed and implemented completely from scratch"
repository = "https://github.com/brandonLi8/solis"
readme = "README.md"
license = "TODO"
keywords = ["solis", "programming language", "language"]
categories = ["compilers"]
rust-version = "1.66"

[dependencies]
regex = "1"
lazy_static = "1.4.0"
colored = "2.0.0"
exitcode = "1.1.2"
cc = "1.0.78"

[dev-dependencies]
expect-test = "1.4.0"

[lib]
name = "solis"
path = "src/main.rs"
doctest = false

[features]
test = []